Fix word wrapping and margins for messages

--- a/src/views/scss/style.scss
+++ b/src/views/scss/style.scss
@@ -200,11 +200,16 @@ form.wide-form {
     opacity: 0.5;
 }
 
+
+#new-message {
+    padding-right: 2.5rem;
+}
+
 .message {
     $wing-size: 10px;
     display: flex;
     align-items: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: .5rem;
 
     .time {
         font-size: 0.8rem;
@@ -219,6 +224,8 @@ form.wide-form {
         margin: 0;
         min-height: 28px;
         border-radius: 0.66rem;
+        overflow-wrap: anywhere;
+        max-width: 100%;
 
         &::before {
             bottom: 0;
@@ -264,6 +271,10 @@ form.wide-form {
 .ad-info {
     background-color: $bg-color;
     display: flex;
+    padding: 0 1rem;
+    border-bottom: 2px solid $border-color;
+    align-items: center;
+    gap: 1rem;
 }
 
 input[type="text"],
